--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -8,25 +8,27 @@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <ul class="nav flex-column">
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Security">
+                <span class="oi oi-lock-unlocked" aria-hidden="true"></span> Security
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="Adults">
+                <span class="oi oi-list" aria-hidden="true"></span> Adults
             </NavLink>
         </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="Security">
-                <span class="oi oi-lock-unlocked" aria-hidden="true"></span> Security
-            </NavLink>
-        </li>
+        <AuthorizeView Policy="Adult">
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="AddAdult">
+                    <span class="oi oi-plus" aria-hidden="true"></span>New Adult
+                </NavLink>
+            </li>
+        </AuthorizeView>
     </ul>
 </div>
 
