--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,7 +1,6 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>Hello!</h1>
 
-Welcome to your new app.
+Welcome to app that manages Family information.
 
-<SurveyPrompt Title="How is Blazor working for you?"/>
