--- a/Pages/Security.razor
+++ b/Pages/Security.razor
@@ -19,7 +19,7 @@
         <a href="" @onclick="PerformLogin">Login</a>
     </NotAuthorized>
     <Authorized>
-        <a href="" @onclick="PerformLogout">Log out</a>
+        <Logout/>
     </Authorized>
 </AuthorizeView>
 
@@ -41,21 +41,6 @@
         catch (Exception e)
         {
             errorMessage = e.Message;
-        }
-    }
-
-    public async Task PerformLogout()
-    {
-        errorMessage = "";
-        username = "";
-        password = "";
-        try
-        {
-            ((CustomAuthenticationStateProvider) AuthenticationStateProvider).Logout();
-            NavigationManager.NavigateTo("/");
-        }
-        catch (Exception e)
-        {
         }
     }
 
