--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -18,14 +18,14 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="Adults">
-                <span class="oi oi-list" aria-hidden="true"></span> Adults
+            <NavLink class="nav-link" href="Families">
+                <span class="oi oi-list" aria-hidden="true"></span> Families
             </NavLink>
         </li>
-        <AuthorizeView Policy="Adult">
+        <AuthorizeView Policy="Admin">
             <li class="nav-item px-3">
-                <NavLink class="nav-link" href="AddAdult">
-                    <span class="oi oi-plus" aria-hidden="true"></span>New Adult
+                <NavLink class="nav-link" href="AddFamily">
+                    <span class="oi oi-plus" aria-hidden="true"></span>New Family
                 </NavLink>
             </li>
         </AuthorizeView>
