--- a/Pages/AddAdult.razor
+++ b/Pages/AddAdult.razor
@@ -5,7 +5,7 @@
 @inject IFamilyService FamilyService
 @inject NavigationManager NavigationManager
 <h3>Add Adult</h3>
-<EditForm Model="@newAdultItem" OnValidSubmit="@AddNewAdult">
+<EditForm Model="@newAdultItem" OnValidSubmit="@AddNewAdultAsync">
     <DataAnnotationsValidator/>
     <ValidationSummary/>
     <div class="form-group">
@@ -54,9 +54,9 @@
 @code {
     private Adult newAdultItem = new Adult();
 
-    private void AddNewAdult()
+    private async Task AddNewAdultAsync()
     {
-        FamilyService.AddAdult(newAdultItem);
+        await FamilyService.AddAdultAsync(newAdultItem);
         NavigationManager.NavigateTo("/SeeFamily");
     }
 
