--- a/Pages/AddChild.razor
+++ b/Pages/AddChild.razor
@@ -8,7 +8,7 @@
 <div class="container">
     <div class="row">
         <div class="col-lg">
-            <EditForm Model="@newChildItem" OnValidSubmit="@AddNewChild">
+            <EditForm Model="@newChildItem" OnValidSubmit="@AddNewChildAsync">
                 <DataAnnotationsValidator/>
                 <ValidationSummary/>
                 <div class="form-group">
@@ -98,8 +98,9 @@
     protected override async Task OnInitializedAsync()
     {
         Pets = newChildItem.Pets;
-        pets = FamilyService.GetFamilies().SelectMany(item => item.Pets).ToList();
-        foreach (var f in FamilyService.GetFamilies())
+        IList<Family> families = await FamilyService.GetFamiliesAsync();
+        pets = families.SelectMany(item => item.Pets).ToList();
+        foreach (var f in families)
         {
             foreach (var p in f.Children.SelectMany(c => c.Pets))
             {
@@ -108,9 +109,9 @@
         }
     }
 
-    private void AddNewChild()
+    private async Task AddNewChildAsync()
     {
-        FamilyService.AddChild(newChildItem);
+        await FamilyService.AddChildAsync(newChildItem);
         NavigationManager.NavigateTo("/SeeFamily");
     }
 
