--- a/Pages/FamilyPets.razor
+++ b/Pages/FamilyPets.razor
@@ -41,7 +41,7 @@ else
             <tr>
                 <td>
                     <AuthorizeView Policy="Adult">
-                        <button @onclick="@(() => RemovePet(item.Id))">
+                        <button @onclick="@(() => RemovePetAsync(item.Id))">
                             <i class="oi oi-trash" style="color:red"/>
                         </button>
                     </AuthorizeView>
@@ -63,10 +63,10 @@ else
         petsToShow = FamilyService.Family.Pets;
     }
 
-    private void RemovePet(int petId)
+    private async Task RemovePetAsync(int petId)
     {
         Pet petToRemove = petsToShow.First(a => a.Id == petId);
-        FamilyService.RemovePet(petId);
+        await FamilyService.RemovePetAsync(petId);
         petsToShow.Remove(petToRemove);
     }
 
